# fast-track-framework

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LIFECYCLE_MANAGEMENT_VALIDATION.md  README.md  RELEASE_NOTES_v1.md  SPRINT_2_1_SUMMARY.md  SPRINT_2_2_DATABASE_IMPLEMENTATION.md  SPRINT_2_3_SUMMARY.md  SPRINT_2_5_SUMMARY.md  SPRINT_2_6_SUMMARY.md  SPRINT_5_2_IMPLEMENTATION.md  TECHNICAL_DEBT_RESOLUTION.md  alembic.ini  fix_imports.py  migrate.sh  mkdocs.yml  pyproject.toml
docs/: README.md  SPRINT_5_2_IMPLEMENTATION.md  SPRINT_5_3_IMPLEMENTATION.md
docs/architecture/: decisions.md
docs/guides/: container.md  database.md  migrations.md  quickstart.md  schedule.md  testing.md
docs/history/: SPRINT_10_0_SUMMARY.md  SPRINT_11_0_SUMMARY.md  SPRINT_12_0_SUMMARY.md  SPRINT_13_0_SUMMARY.md  SPRINT_14_0_SUMMARY.md  SPRINT_15_0_SUMMARY.md  SPRINT_16_0_SUMMARY.md  SPRINT_16_1_SUMMARY.md  SPRINT_17_1_SUMMARY.md  SPRINT_18_2_SUMMARY.md  SPRINT_18_SUMMARY.md  SPRINT_1_1_SUMMARY.md  SPRINT_1_2_SUMMARY.md  SPRINT_1_3_SUMMARY.md  SPRINT_2_1_SUMMARY.md  SPRINT_2_2_DATABASE_IMPLEMENTATION.md  SPRINT_2_2_SUMMARY.md  SPRINT_2_2_TEST_RESULTS.md  SPRINT_2_3_SUMMARY.md  SPRINT_2_4_SUMMARY.md  SPRINT_2_5_SUMMARY.md  SPRINT_2_7_SUMMARY.md  SPRINT_2_8_SUMMARY.md  SPRINT_2_9_SUMMARY.md  SPRINT_3_0_SUMMARY.md  SPRINT_3_1_SUMMARY.md  SPRINT_3_2_SUMMARY.md  SPRINT_3_3_SUMMARY.md  SPRINT_3_4_SUMMARY.md  SPRINT_3_5_SUMMARY.md  SPRINT_3_6_SUMMARY.md  SPRINT_3_7_SUMMARY.md  SPRINT_3_8_SUMMARY.md  SPRINT_4_0_SUMMARY.md  SPRINT_4_1_SUMMARY.md  SPRINT_4_2_SUMMARY.md  SPRINT_5_0_SUMMARY.md  SPRINT_5_1_SUMMARY.md  SPRINT_5_2_SUMMARY.md  SPRINT_5_3_SUMMARY.md  (+8 more)
docs/quality/: ASYNC_BOOT_SYNC_CONTEXT.md  ASYNC_CONCURRENCY_VALIDATION.md  DEPENDENCY_OVERRIDE_VALIDATION.md  LIFECYCLE_MANAGEMENT_VALIDATION.md  TECHNICAL_DEBT_RESOLUTION.md
examples/: README.md  blog_example.py  event_system_example.py  resource_example.py
framework/fast_query/: __init__.py  base.py  factories.py  mixins.py  pagination.py  query_builder.py  repository.py  seeding.py
framework/ftf/: __init__.py
framework/ftf/auth/: __init__.py  auth_manager.py  crypto.py  dependencies.py  gates.py  guard.py  policies.py  user_provider.py
framework/ftf/cache/: __init__.py  manager.py
framework/ftf/cli/: main.py  templates.py
framework/ftf/config/: __init__.py  repository.py
framework/ftf/core/: __init__.py  container.py  service_provider.py
framework/ftf/events/: __init__.py  core.py
framework/ftf/http/: app.py  exceptions.py  params.py
framework/ftf/i18n/: __init__.py
framework/ftf/mail/: exceptions.py  mailable.py  pending_mail.py
framework/ftf/providers/: __init__.py  database.py  database_service_provider.py  event_service_provider.py
framework/ftf/resources/: collection.py
framework/ftf/schedule/: __init__.py
framework/ftf/storage/: __init__.py  exceptions.py  manager.py
framework/ftf/validation/: handler.py  request.py  rules.py
framework/jtc/: __init__.py  main.py
framework/jtc/auth/: __init__.py  auth_manager.py  contracts.py  dependencies.py  gates.py  guard.py  jwt.py  policies.py  user_provider.py
framework/jtc/cache/: __init__.py  manager.py
framework/jtc/cli/: __init__.py  main.py  templates.py
framework/jtc/config/: __init__.py  repository.py
framework/jtc/core/: exceptions.py  service_provider.py
framework/jtc/events/: __init__.py  core.py
framework/jtc/http/: app.py  exceptions.py
framework/jtc/i18n/: __init__.py  core.py
framework/jtc/jobs/: __init__.py  core.py  send_mail_job.py
framework/jtc/mail/: __init__.py  mailable.py  manager.py  pending_mail.py
framework/jtc/providers/: database_service_provider.py  event_service_provider.py  queue_provider.py
framework/jtc/resources/: __init__.py  collection.py  core.py  user_resource.py
framework/jtc/schedule/: __init__.py  core.py
framework/jtc/storage/: __init__.py  contracts.py  manager.py
framework/jtc/validation/: __init__.py  handler.py  rules.py
migrations/: README.md  env.py
migrations/versions/: 20260128_2334_6acc022856d9_add_posts_comments_and_roles_tables_.py
src/fast_query/: __init__.py  base.py  engine.py  exceptions.py  query_builder.py  repository.py  session.py
src/ftf/: __init__.py  main.py
src/ftf/auth/: crypto.py  jwt.py
src/ftf/cli/: __init__.py  main.py  templates.py
src/ftf/core/: __init__.py  container.py
src/ftf/database/: __init__.py  base.py  engine.py  query_builder.py  repository.py  session.py
src/ftf/events/: core.py
src/ftf/exercises/: __init__.py  sprint_1_1_async_ingestor.py  sprint_1_2_active_record_trap.py  sprint_1_2_demo.py
src/ftf/http/: __init__.py  app.py
src/ftf/i18n/: core.py
src/ftf/jobs/: __init__.py  core.py  send_mail_job.py
src/ftf/mail/: __init__.py  contracts.py  manager.py
src/ftf/models/: __init__.py  comment.py  post.py  role.py  user.py
src/ftf/providers/: queue_provider.py
src/ftf/resources/: __init__.py  core.py  user_resource.py
src/ftf/schedule/: core.py
src/ftf/validation/: __init__.py  handler.py  request.py
src/mail/: test_email.py
src/rules/: cpf_is_valid.py
tests/: conftest.py
tests/benchmarks/: test_eager_loading_budget.py
tests/cli/: __init__.py  test_make_commands.py
tests/contract/: test_sql_generation.py
tests/factories/: model_factories.py
tests/integration/: test_database_integration.py  test_relationships_cascade.py  test_relationships_n_plus_one.py  test_welcome_controller.py
tests/seeders/: __init__.py
tests/unit/: __init__.py  test_factories.py  test_query_builder.py  test_query_builder_advanced.py  test_repository.py  test_storage.py
tests/utils/: query_counter.py
tests/validation/: test_form_request.py
workbench/: .env.example  .gitignore  main.py
workbench/config/: __init__.py  app.py  database.py  settings.py
workbench/examples/: README.md  blog_example.py  database_example.py  mail_example.py  resource_example.py  schedule_example.py  storage_example.py  store_user_request_example.py
workbench/routes/: __init__.py  api.py
workbench/tests/: conftest.py
(+137 files in other folders)
