[tool.poetry]
name = "fast-track-framework"
version = "5.0.0"
description = "A Laravel-inspired micro-framework built on FastAPI for educational purposes"
authors = ["Everton Schipfer <eveschipfer@gmail.com>"]
readme = "README.md"
packages = [
    {include = "ftf", from = "framework"},
    {include = "fast_query", from = "framework"},
    {include = "app", from = "workbench"},
    {include = "tests", from = "workbench"}
]
license = "MIT"
homepage = "https://github.com/eveschipfer/fast-track-framework"
keywords = ["fastapi", "laravel", "framework", "dependency-injection", "async"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

[tool.poetry.dependencies]
python = "^3.13"
aiofiles = "^24.1.0"  # Async file I/O (Sprint 1.1)
fastapi = "^0.128.0"  # Web framework (Sprint 2.x)
uvicorn = "^0.40.0"  # ASGI server
httpx = "^0.28.1"  # HTTP client for testing
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}  # ORM with async support (Sprint 2.2)
alembic = "^1.13.0"  # Database migrations (Sprint 2.2)
aiosqlite = "^0.20.0"  # Async SQLite driver (Sprint 2.2)
typer = "^0.15.0"  # CLI framework (Sprint 3.0)
rich = "^13.9.0"  # Beautiful terminal output (Sprint 3.0)
saq = "^0.12.0"  # Simple Async Queue for background jobs (Sprint 3.2)
redis = "^5.0.0"  # Async Redis client (Sprint 3.2)
aiohttp = "^3.9.0"  # For SAQ dashboard UI (Sprint 3.2)
pyjwt = "^2.8.0"  # JWT token generation and verification (Sprint 3.3)
passlib = {extras = ["bcrypt"], version = "^1.7.4"}  # Password hashing (Sprint 3.3)
bcrypt = "^4.0.0,<5.0.0"  # Pin to 4.x for passlib compatibility (Sprint 5.1)
python-dotenv = "^1.0.0"  # Environment variable management (Sprint 3.3)
# Future dependencies (uncomment when needed):
# pydantic = "^2.9.0"
jinja2 = "^3.1.6"
aiosmtplib = "^5.1.0"
aioboto3 = {version = "^15.5.0", optional = true}

[tool.poetry.scripts]
ftf = "ftf.cli.main:app"  # CLI entry point (Sprint 3.0)

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^9.0.0"
pytest-asyncio = "^1.3.0"
pytest-cov = "^6.0.0"
pytest-benchmark = "^5.1.0"
faker = "^20.0.0"  # Fake data generation for factories (Sprint 2.8)
email-validator = "^2.1.0"  # For Pydantic EmailStr (Sprint 2.9)

# Type checking
mypy = "^1.13.0"
types-aiofiles = "^24.1.0"

# Code formatting
black = "^24.10.0"
isort = "^5.13.0"

# Linting
ruff = "^0.8.0"

# Pre-commit hooks
pre-commit = "^4.0.0"

# Documentation (optional)
# mkdocs = "^1.6.0"
# mkdocs-material = "^9.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ============================================================================
# TOOL CONFIGURATIONS
# ============================================================================

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["workbench/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=framework/ftf",
    "--cov=workbench/app",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["framework/ftf", "workbench/app"]
omit = [
    "*/tests/*",
    "*/exercises/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_error_context = true
pretty = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_calls = false

[tool.black]
line-length = 88
target-version = ["py313"]  # py314 not yet supported, using py313
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
src_paths = ["framework", "workbench"]

[tool.ruff]
target-version = "py313"  # py314 not yet supported, using py313
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "YTT", # flake8-2020
    "S",   # flake8-bandit
    "BLE", # flake8-blind-except
    "FBT", # flake8-boolean-trap
    "A",   # flake8-builtins
    "COM", # flake8-commas
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "T10", # flake8-debugger
    "EM",  # flake8-errmsg
    "ISC", # flake8-implicit-str-concat
    "ICN", # flake8-import-conventions
    "G",   # flake8-logging-format
    "PIE", # flake8-pie
    "T20", # flake8-print
    "PT",  # flake8-pytest-style
    "Q",   # flake8-quotes
    "RSE", # flake8-raise
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "TCH", # flake8-type-checking
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate
    "PL",  # pylint
    "TRY", # tryceratops
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by black)
    "S101",   # use of assert (needed for tests)
    "PLR0913", # too many arguments
    "TRY003",  # long messages in exceptions
    "EM102",   # f-string in exception (acceptable for detailed errors)
    "B904",    # raise from (not always needed in DI context)
    "UP035",   # typing imports (keep for clarity until 3.9+ minimum)
    "COM812",  # trailing comma (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"workbench/tests/**/*.py" = [
    "S101",   # assert allowed in tests
    "PLR2004", # magic values allowed in tests
    "S105",   # hardcoded password string (test data)
    "B008",   # function call in defaults (FastAPI Depends pattern)
]
"workbench/examples/**/*.py" = [
    "T201",   # print allowed in exercises/demos
    "S311",   # random for non-cryptographic use is ok in demos
]
"framework/ftf/http/controllers/**/*.py" = [
    "B008",   # function call in defaults (FastAPI Depends pattern)
]
"framework/ftf/main.py" = [
    "ERA001", # commented code allowed for examples
]
"workbench/main.py" = [
    "ERA001", # commented code allowed for examples
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 5
max-branches = 12
max-returns = 6
max-statements = 50
